<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:background="#000000"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/idNameApp"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/idNameApp"
            android:textColor="@color/white"
            android:textSize="40dp"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/idFirstTeam"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:text="@string/nameFirstTeam"
            android:textColor="@color/white"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/idSecondTeam"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/nameSecondTeam"
            android:textColor="@color/white"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/idStartBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#4CAF50"
            android:backgroundTint="#4CAF50"
            android:onClick="startMatch"
            android:text="@string/textStartBTN"
            android:textSize="25dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>